# Projet_HuggingFace

./: .env  README.md  SegHuggingFace.ipynb  Segmentation.ipynb  SegmentationFinal.ipynb  SegmentationHuggingFace.ipynb  TestHuggingFace.ipynb  Test_Key_Api.ipynb  pyproject.toml  requirements.txt
