[project]
name = "projet-huggingface"
version = "0.1.0"
description = "Identifier des vetements  avec l api huggingFace"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "huggingface-hub (>=0.32.5,<0.33.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "transformers (>=4.52.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
